# bash-select

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md
docs/: README.md  README_zh-CN.md
include/: data_out.h  getopt_util.h  global.h  main.h  process.h  util.h
process/: CMakeLists.txt  process.cpp
process/include/: process.h
src/: data_out.cpp  getopt_util.cpp  main.cpp
util/: CMakeLists.txt  util.cpp
util/include/: util.h
